--- a/app/views/books/edit_error.html.erb
+++ b/app/views/books/edit_error.html.erb
@@ -1,3 +1,14 @@
+<div id="error_explanation">
+    <% if @book.errors.any? %>
+    <h2><%= @book.errors.count %>errors prohibited this book from being saved:</h2>
+    <ul>
+      <% @book.errors.full_messages.each do |message| %>
+      <li><%= message %></li>
+      <% end %>
+    </ul>
+    <% end %>
+</div>
+
 <h1>Editing Book</h1>
 <%= form_with model: @book do |f| %>
 <div class="field">
